config script for execute test

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/hamiltongabriel/go-jest.git",
   "author": "Hamilton Gabriel <gabrielzinho.gabriel2@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "jest": "^25.4.0"
   }
