--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "jest"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^25.4.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "^25.4.0"
   }
 }
